[package]
name = "arc"
version = "0.1.0"
authors = ["Constanza Aceves Rodriguez <cacevesr@u.rochester.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diffy = "0.2"
